[gd_scene load_steps=25 format=3 uid="uid://dlfjb1m6w3dst"]

[ext_resource type="PackedScene" uid="uid://dn0yk3wiakddr" path="res://levels/level_background.tscn" id="1_p7pge"]
[ext_resource type="Script" path="res://levels/Level1Controller.gd" id="1_siwir"]
[ext_resource type="PackedScene" uid="uid://cget7lr6jumuo" path="res://level_root.tscn" id="1_x54y2"]
[ext_resource type="Texture2D" uid="uid://da7oajlefehbf" path="res://levels/graphics/Tile1.png" id="5_axcea"]
[ext_resource type="Texture2D" uid="uid://th6750v3w0o0" path="res://levels/graphics/Tile3.png" id="6_vad4h"]
[ext_resource type="Texture2D" uid="uid://ccoxws5uukt0n" path="res://levels/graphics/Spikes1.png" id="7_gwd32"]
[ext_resource type="Texture2D" uid="uid://dx8yyv7fuapke" path="res://levels/graphics/Tile2.png" id="7_ooa2f"]
[ext_resource type="Texture2D" uid="uid://b7wuoj30joa3a" path="res://levels/graphics/Tile4.png" id="8_5a2se"]
[ext_resource type="Texture2D" uid="uid://cmi2gr3kik0d0" path="res://levels/graphics/TileEnd.png" id="9_qdaxs"]
[ext_resource type="Texture2D" uid="uid://c74codffpakqq" path="res://levels/graphics/TileStart.png" id="9_wl76h"]
[ext_resource type="Texture2D" uid="uid://5cdvp7lng5lr" path="res://levels/graphics/Spikes2.png" id="10_c4et3"]
[ext_resource type="PackedScene" uid="uid://d25lwn4fvx02d" path="res://levels/spawner.tscn" id="11_csuu2"]
[ext_resource type="Script" path="res://levels/KillZone.gd" id="12_b5vna"]
[ext_resource type="PackedScene" uid="uid://4hek7htrjn7k" path="res://pawns/gozzuppa.tscn" id="13_yud0a"]
[ext_resource type="Script" path="res://levels/Hint.gd" id="15_4hyf6"]
[ext_resource type="PackedScene" uid="uid://cfbvuoh1iomrl" path="res://interface/tutorial.tscn" id="15_6ihks"]
[ext_resource type="PackedScene" uid="uid://bry0qk84weeo2" path="res://pickups/page.tscn" id="15_okwid"]
[ext_resource type="Texture2D" uid="uid://bnv01jjx7q5ws" path="res://outline.png" id="16_l4j4a"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_rmqys"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_gwks1"]
normal = Vector2(-1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yow3n"]
size = Vector2(182, 16.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vabb"]
size = Vector2(124.75, 10)

[sub_resource type="Animation" id="Animation_7ptrv"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cjh3o"]
_data = {
"idle": SubResource("Animation_7ptrv")
}

[node name="Level1" type="Node2D"]
script = ExtResource("1_siwir")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="LevelBackground" parent="." instance=ExtResource("1_p7pge")]
process_mode = 3

[node name="LevelRoot" parent="." instance=ExtResource("1_x54y2")]
visible = false

[node name="Terrain" type="Node2D" parent="."]

[node name="Left Wall" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Left Wall"]
position = Vector2(200, 218)
shape = SubResource("WorldBoundaryShape2D_rmqys")

[node name="Right Wall" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Right Wall"]
position = Vector2(780, 245)
shape = SubResource("WorldBoundaryShape2D_gwks1")

[node name="Bottom Floor" type="StaticBody2D" parent="Terrain"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terrain/Bottom Floor"]
z_index = 99
position = Vector2(0, 400)
polygon = PackedVector2Array(200, 0, 200, 150, 780, 150, 780, 2, 563, 2, 561, 60, 380, 60, 380, 0)

[node name="Tiles" type="Node2D" parent="Terrain/Bottom Floor"]

[node name="Bottom Level" type="Node2D" parent="Terrain/Bottom Floor/Tiles"]

[node name="Tile1-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(325, 473)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_axcea")
centered = false

[node name="Tile2-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(370, 474)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="Tile3-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(410, 475)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_vad4h")
centered = false

[node name="Tile2-2" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(453, 476)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="Tile1-2" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(491, 476)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_axcea")
centered = false

[node name="Tile4-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(534, 478)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_5a2se")
centered = false

[node name="Spikes1-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(377, 432)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_gwd32")
centered = false

[node name="Spikes2-4" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(424, 443)
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_c4et3")
centered = false

[node name="Spikes1-3" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(464, 431)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_gwd32")
centered = false

[node name="Spikes2-5" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(511, 443)
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_c4et3")
centered = false

[node name="Tile1-3" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(554, 472)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_axcea")
centered = false

[node name="Tile3-3" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(557, 452)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_vad4h")
centered = false

[node name="Tile2-3" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(557, 431)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="Tile4-2" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Bottom Level"]
z_index = 1
position = Vector2(556, 416)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_5a2se")
centered = false

[node name="Sides" type="Node2D" parent="Terrain/Bottom Floor/Tiles"]

[node name="Tile3-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Sides"]
z_index = 1
position = Vector2(328, 454)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_vad4h")
centered = false

[node name="Tile2-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Sides"]
z_index = 1
position = Vector2(328, 431)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="Tile4-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Sides"]
z_index = 1
position = Vector2(328, 414)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_5a2se")
centered = false

[node name="Top Level" type="Node2D" parent="Terrain/Bottom Floor/Tiles"]

[node name="Tile1-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(197, 387)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_axcea")
centered = false

[node name="StartTile" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(240, 387)
scale = Vector2(0.3, 0.3)
texture = ExtResource("9_wl76h")
centered = false

[node name="Tile2-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(288, 392)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="Tile3-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(330, 392)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_vad4h")
centered = false

[node name="Tile1-2" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(555, 393)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_axcea")
centered = false

[node name="Tile4-3" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(598, 397)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_5a2se")
centered = false

[node name="Tile3-2" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(637, 394)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_vad4h")
centered = false

[node name="Tile2-2" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(677, 392)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="Tile4-1" type="Sprite2D" parent="Terrain/Bottom Floor/Tiles/Top Level"]
z_index = 1
position = Vector2(722, 394)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_5a2se")
centered = false

[node name="Top Floor" type="StaticBody2D" parent="Terrain"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Terrain/Top Floor"]
z_index = 99
position = Vector2(0, 175)
polygon = PackedVector2Array(200, 0, 200, 25, 660, 23, 660, 0, 500, 1, 500, -7, 374, -7, 374, 1)

[node name="Tiles" type="Node2D" parent="Terrain/Top Floor"]

[node name="Tile2-1" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(199, 163)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="EndTile" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(241, 164)
scale = Vector2(0.3, 0.3)
texture = ExtResource("9_qdaxs")
centered = false

[node name="Tile3-1" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(284, 165)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_vad4h")
centered = false

[node name="Tile1-1" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(323, 165)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_axcea")
centered = false

[node name="Spikes2-1" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(368, 149)
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_c4et3")
centered = false

[node name="Spikes2-2" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(410, 149)
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_c4et3")
centered = false

[node name="Spikes2-3" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(452, 148)
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_c4et3")
centered = false

[node name="Tile3-2" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(489, 164)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_vad4h")
centered = false

[node name="Tile4-2" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(529, 166)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_5a2se")
centered = false

[node name="Tile2-3" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(570, 167)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_ooa2f")
centered = false

[node name="Tile1-3" type="Sprite2D" parent="Terrain/Top Floor/Tiles"]
z_index = 1
position = Vector2(611, 165)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_axcea")
centered = false

[node name="Spawner" parent="." instance=ExtResource("11_csuu2")]

[node name="Hazards" type="Node2D" parent="."]

[node name="Bottom Spikes" type="Area2D" parent="Hazards"]
position = Vector2(-1, 301)
script = ExtResource("12_b5vna")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazards/Bottom Spikes"]
z_index = 99
position = Vector2(472, 150.25)
shape = SubResource("RectangleShape2D_yow3n")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Top Spikes" type="Area2D" parent="Hazards"]
position = Vector2(-1, 301)
script = ExtResource("12_b5vna")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hazards/Top Spikes"]
z_index = 99
position = Vector2(437, -138)
shape = SubResource("RectangleShape2D_6vabb")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Gozzuppa" parent="." instance=ExtResource("13_yud0a")]
z_index = 1
position = Vector2(730, 373)

[node name="Page" parent="." instance=ExtResource("15_okwid")]
process_mode = 3
position = Vector2(566, 110)
input_pickable = false
summon_name = "Wakka"

[node name="Hint" type="Node2D" parent="."]
process_mode = 3
visible = false
position = Vector2(472, 404)
script = ExtResource("15_4hyf6")

[node name="Sprite2D" type="Sprite2D" parent="Hint"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("16_l4j4a")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hint"]
libraries = {
"": SubResource("AnimationLibrary_cjh3o")
}

[node name="TutorialController" parent="." instance=ExtResource("15_6ihks")]
z_index = 10
y_sort_enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="bluuk_placed" from="LevelRoot" to="." method="_on_level_root_bluuk_placed"]
[connection signal="respawn_requested" from="LevelRoot" to="Spawner" method="place_player_at_spawn"]
[connection signal="scroll_acquired" from="LevelRoot" to="." method="_on_level_root_scroll_acquired"]
[connection signal="wakka_placed" from="LevelRoot" to="." method="_on_level_root_wakka_placed"]
[connection signal="player_killed" from="Spawner" to="." method="_on_spawner_player_killed"]
[connection signal="body_entered" from="Hazards/Bottom Spikes" to="Hazards/Bottom Spikes" method="on_body_entered"]
[connection signal="body_entered" from="Hazards/Top Spikes" to="Hazards/Top Spikes" method="on_body_entered"]
[connection signal="tutorial_end_signal" from="TutorialController" to="." method="_on_tutorial_controller_tutorial_end_signal"]
